# prometry

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/algebra/: CMakeLists.txt  algebra.cpp  algebra.h  util.cpp  util.h
src/common/: CMakeLists.txt  assert.h  common_funcs.h  common_types.h  dynamic_bitset.cpp  dynamic_bitset.h  printer.cpp  printer.h  proof_chain_node.cpp  proof_chain_node.h
src/core/: CMakeLists.txt  conclusion.cpp  conclusion.h  element.cpp  element.h  printer.h  system.cpp  system.h  transform.h
src/geometry/: CMakeLists.txt  prospec.h
src/geometry/conclusion/: conclusion_types.h  line_parallel.cpp  line_parallel.h  line_perpendicular.cpp  line_perpendicular.h  line_prependicular.cpp  line_prependicular.h  triangle_similar.cpp  triangle_similar.h
src/geometry/construction/: all_constructions.cpp  all_constructions.h  line_connect.cpp  line_connect.h  triangle_make.cpp  triangle_make.h
src/geometry/element/: element_types.h  line.cpp  line.h  line_angle.cpp  line_angle.h  line_segment.cpp  point.cpp  point.h  standalone_line.cpp  standalone_line.h  triangle.cpp  triangle.h
src/geometry/element/line/: line.cpp  line.h  line_angle.cpp  line_angle.h  line_segment.cpp  line_segment.h
src/geometry/transform/: all_transforms.cpp  all_transforms.h  angles_to_parallel.cpp  angles_to_parallel.h  line_parallel_transitivity.cpp  line_parallel_transitivity.h  parallel_to_angles.cpp  parallel_to_angles.h  pythagorean.cpp  pythagorean.h
src/geometry/transform/algebra/: line_segment_concat.cpp  line_segment_concat.h
src/geometry/transform/parallel/: angles_to_parallel.cpp  angles_to_parallel.h  angles_to_perpendicular.cpp  angles_to_perpendicular.h  angles_to_prependicular.cpp  angles_to_prependicular.h  line_parallel_transitivity.cpp  line_parallel_transitivity.h  parallel_to_angles.cpp  parallel_to_angles.h  perpendicular_to_angles.cpp  perpendicular_to_angles.h  prependicular_to_angles.cpp  prependicular_to_angles.h
src/geometry/transform/pythagorean/: pythagorean.cpp  pythagorean.h
src/geometry/transform/triangle/: aa_similar.cpp  aa_similar.h  angles_to_isosceles.cpp  angles_to_isosceles.h  hl_similar.cpp  hl_similar.h  isosceles_to_angles.cpp  isosceles_to_angles.h  sas_similar.cpp  sas_similar.h  similar_to_angles.cpp  similar_to_angles.h  similar_to_line_segment_ratio.cpp  similar_to_line_segment_ratio.h  sss_similar.cpp  sss_similar.h  triangle_internal_angles.cpp  triangle_internal_angles.h
src/tests/: CMakeLists.txt  tests.cpp
src/tests/algebra/: algebra_lib.cpp  check_equation.cpp  solve_1.cpp  solve_2.cpp  util_check_sign.cpp  util_equation_to_string.cpp  util_simplify_equation.cpp
src/tests/common/: dynamic_bitset.cpp  string_pack.cpp
src/tests/construction/: line_connect.cpp  triangle_make.cpp
src/tests/core/: element_common_parent.cpp  element_intersection.cpp
src/tests/element/: triangle_order.cpp
src/tests/integrated/: proof_output.cpp  pythagorean.cpp  triangle_equality_1.cpp  triangle_equality_2.cpp  triangle_equality_3.cpp  triangle_similarity_1.cpp  triangle_similarity_2.cpp  triangle_similarity_3.cpp
src/tests/transform/: angles_to_parallel.cpp  line_parallel_transitivity.cpp  line_segment_concat.cpp  parallel_to_angles.cpp  pythagorean.cpp
src/tests/transform/algebra/: line_segment_concat.cpp
src/tests/transform/parallel/: angles_to_parallel.cpp  angles_to_perpendicular.cpp  angles_to_prependicular.cpp  line_parallel_transitivity.cpp  parallel_to_angles.cpp  perpendicular_to_angles.cpp  prependicular_to_angles.cpp
src/tests/transform/pythagorean/: pythagorean.cpp
src/tests/transform/triangle/: aa_similar.cpp  aas_asa.cpp  angles_to_isosceles.cpp  hl_similar.cpp  isosceles_to_angles.cpp  sas_similar.cpp  similar_to_angles.cpp  similar_to_line_segment_ratio.cpp  sss_similar.cpp  triangle_internal_angles.cpp
