add_library(geometry STATIC
    conclusion/conclusion_types.h
    conclusion/line_parallel.cpp
    conclusion/line_parallel.h
    conclusion/line_prependicular.cpp
    conclusion/line_prependicular.h
    conclusion/triangle_similar.cpp
    conclusion/triangle_similar.h
    construction/all_constructions.cpp
    construction/all_constructions.h
    construction/line_connect.cpp
    construction/line_connect.h
    construction/triangle_make.cpp
    construction/triangle_make.h
    element/element_types.h
    element/line/line.cpp
    element/line/line.h
    element/line/line_angle.cpp
    element/line/line_angle.h
    element/line/line_segment.cpp
    element/line/line_segment.h
    element/point.cpp
    element/point.h
    element/triangle.cpp
    element/triangle.h
    transform/algebra/line_segment_concat.cpp
    transform/algebra/line_segment_concat.h
    transform/all_transforms.cpp
    transform/all_transforms.h
    transform/parallel/angles_to_parallel.cpp
    transform/parallel/angles_to_parallel.h
    transform/parallel/angles_to_prependicular.cpp
    transform/parallel/angles_to_prependicular.h
    transform/parallel/line_parallel_transitivity.cpp
    transform/parallel/line_parallel_transitivity.h
    transform/parallel/parallel_to_angles.cpp
    transform/parallel/parallel_to_angles.h
    transform/parallel/prependicular_to_angles.cpp
    transform/parallel/prependicular_to_angles.h
    transform/pythagorean/pythagorean.cpp
    transform/pythagorean/pythagorean.h
    transform/triangle/aa_similar.cpp
    transform/triangle/aa_similar.h
    transform/triangle/similar_to_angles.cpp
    transform/triangle/similar_to_angles.h
    transform/triangle/similar_to_line_segment_ratio.cpp
    transform/triangle/similar_to_line_segment_ratio.h
    transform/triangle/sss_similar.cpp
    transform/triangle/sss_similar.h
    transform/triangle/triangle_internal_angles.cpp
    transform/triangle/triangle_internal_angles.h
)

target_link_libraries(geometry PRIVATE common core)
target_compile_options(geometry PRIVATE ${PROMETRY_CXX_FLAGS})
